--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,14 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// 웰컴! Preshoes 최상위 그레이들 파일입니다!
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.appcompat_version = '1.1.0'
+    ext.core_version = '1.1.0'
+    ext.constraint_layout_version = '1.1.3'
+    ext.junit_version = '4.13'
+    ext.test_junit_version = '1.1.1'
+    ext.espresso_version = '3.2.0'
+
     repositories {
         google()
         jcenter()
