--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.gradle_version = '3.5.3'
+
     ext.appcompat_version = '1.1.0'
     ext.core_version = '1.1.0'
     ext.constraint_layout_version = '1.1.3'
@@ -12,10 +14,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -26,7 +28,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
