--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
-// 웰컴! Preshoes 최상위 그레이들 파일입니다!
+/**
+ * build.gradle
+ *
+ * preshoes 프로젝트의 최상위 gradle 빌드 스크립트입니다.
+ */
 
 buildscript {
     ext.kotlin_version = '1.3.61'
     ext.gradle_version = '3.5.3'
 
     ext.appcompat_version = '1.1.0'
-    ext.core_version = '1.1.0'
+    ext.core_version = '1.2.0'
     ext.constraint_layout_version = '1.1.3'
     ext.junit_version = '4.13'
     ext.test_junit_version = '1.1.1'
@@ -21,6 +25,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        // 알겠쥬?
     }
 }
 
