삽질 후 domain, data, common 모듈 추가.
모듈 추가시 주의
Application/Library name: Preshoes
Module name: [domain|data|common]
Package name: org.wbpbp.preshoes

후에 Manifest에서 package 속성을
org.wbpbp.preshoes 에서
org.wbpbp.preshoes.[domain|data|common]으로 변경.

모듈 삭제: Project structure 메뉴에서 모듈 삭제 후 모듈 디렉토리 수동으로 삭제.

--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -17,6 +17,6 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
+<manifest package="org.wbpbp.preshoes">
 
-</resources>
+</manifest>
