--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2020 WBPBP <potados99@gmail.com>
  *
- * This file is part of Preshoes. (https://github.com/WBPBP).
+ * This file is part of Preshoes (https://github.com/WBPBP).
  *
  * Preshoes is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -15,6 +15,18 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
+/**
+ * common/build.gradle
+ *
+ * 이 프로젝트에 존재하는 모듈 중 common 모듈에 관한 gradle 스크립트입니다.
+ *
+ * 모듈이 무엇인지 모르겠다면, 혹은 왜 모듈이 여러 개인지 모르겠다면, 아래 링크를 참고하세요:
+ *  https://www.google.co.kr/search?newwindow=1&source=hp&ei=Z70_XsziEovZ-QburoyQBA&q=https%3A%2F%2Fwww.google.com%2Fsearch%3Fclient%3Dsafari%26rls%3Den%26q%3Dandroid%2Bmulti%2Bmodule%2Bproject%26ie%3DUTF-8%26oe%3DUTF-8&oq=https%3A%2F%2Fwww.google.com%2Fsearch%3Fclient%3Dsafari%26rls%3Den%26q%3Dandroid%2Bmulti%2Bmodule%2Bproject%26ie%3DUTF-8%26oe%3DUTF-8&gs_l=psy-ab.3...95.95..329...0.0..0.146.146.0j1......0....2j1..gws-wiz.PFlDkdwcbWg&ved=0ahUKEwiMssa-gcTnAhWLbN4KHW4XA0IQ4dUDCAk&uact=5
+ *
+ * gradle이 무엇인지 모르겠다면, 아래 링크를 참고하세요:
+ *  https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=17&ved=2ahUKEwiQjLX_gMTnAhVFCqYKHXSjDZ4QmhMwEHoECA4QAg&url=https%3A%2F%2Fko.wikipedia.org%2Fwiki%2FGradle&usg=AOvVaw1HVGej-u9mah_pPoU0Q-2m
  */
 
 apply plugin: 'com.android.application'
