--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,25 @@
  */
 
 buildscript {
-    ext.kotlin_version = '1.3.61'
-    ext.gradle_version = '3.5.3'
+    ext.kotlin_version = '1.3.72'
+    ext.gradle_version = '3.6.3'
 
     ext.appcompat_version = '1.1.0'
-    ext.core_version = '1.2.0'
+    ext.core_ktx_version = '1.2.0'
     ext.constraint_layout_version = '1.1.3'
     ext.junit_version = '4.13'
     ext.test_junit_version = '1.1.1'
     ext.espresso_version = '3.2.0'
+    ext.timber_version = '4.7.1'
+    ext.collection_ktx_version = '1.1.0'
+    ext.fragment_ktx_version = '1.2.4'
+    ext.livedata_ktx_version = '2.2.0'
+    ext.nav_runtime_ktx_version = '2.2.2'
+    ext.nav_fragment_ktx_version = '2.2.2'
+    ext.nav_ui_ktx_version = '2.2.2'
+    ext.lifecycle_version = '2.2.0'
+    ext.koin_version = '2.0.1'
+    ext.essentials_version = '1.0.0'
 
     repositories {
         google()
@@ -52,6 +62,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven { url 'https://jitpack.io' }
     }
 }
 
