--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,5 @@ dependencies {
     implementation project(":domain")
     implementation project(":data")
     implementation project(":common")
+    implementation 'androidx.preference:preference:1.1.1'
 }
