--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "org.wbpbp.preshoes"
-        minSdkVersion 26
-        targetSdkVersion 28
+        minSdkVersion 27
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -78,6 +78,9 @@ dependencies {
 
     /** 카드  */
     implementation "androidx.cardview:cardview:$cardview_version"
+
+    /** Heat map */
+    implementation "ca.heartlandsoftware:androidheatmap:$heatmap_version"
 
     /** 프로젝트 모듈 */
     implementation project(":domain")
