--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ buildscript {
     ext.essentials_version = '1.0.6'
     ext.battery_meter_version = '2.0.0'
     ext.cardview_version = '1.0.0'
+    ext.heatmap_version = '1.1.1'
 
     repositories {
         google()
