--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ buildscript {
     ext.cardview_version = '1.0.0'
     ext.heatmap_version = '1.1.1'
     ext.material_version = '1.2.0-alpha06'
+    ext.stepview_version = '1.2.6'
+    ext.preference_version = '1.1.1'
 
     repositories {
         google()
