--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ buildscript {
     ext.material_version = '1.2.0-alpha06'
     ext.stepview_version = '1.5.1'
     ext.preference_version = '1.1.1'
+    ext.chart_version = 'v3.1.0'
 
     repositories {
         google()
