--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation "junit:junit:$junit_version"
 
     /** AppCompat */
