--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,10 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$test_junit_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 
     /** AppCompat */
     implementation "androidx.appcompat:appcompat:$appcompat_version"
