--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ buildscript {
     ext.chart_version = 'v3.1.0'
     ext.realm_version = '6.1.0'
     ext.realm_adapters_version = '3.1.0'
+    ext.gson_version = '2.8.5'
+    ext.retrofit_version = '2.6.0'
 
     repositories {
         google()
