--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ buildscript {
     ext.realm_adapters_version = '3.1.0'
     ext.gson_version = '2.8.5'
     ext.retrofit_version = '2.6.0'
+    ext.cookiejar_version = 'v1.0.1'
 
     repositories {
         google()
