--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
         android:name=".common.MyApplication"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -28,12 +28,15 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".feature.account.LoginActivity"
+            android:label="@string/title_activity_login" />
+
         <activity android:name=".feature.main.MainActivity" />
 
         <activity
             android:name=".feature.settings.SettingsActivity"
             android:label="@string/title_activity_settings" />
-
     </application>
 
 </manifest>
