--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ buildscript {
     ext.gson_version = '2.8.5'
     ext.retrofit_version = '2.6.0'
     ext.cookiejar_version = 'v1.0.1'
+    ext.preference_version = '1.1.1'
 
     repositories {
         google()
