--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,10 @@
  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 
-/**
- * build.gradle
- *
- * preshoes 프로젝트의 최상위 gradle 빌드 스크립트입니다.
- */
-
 buildscript {
+    /** THE VERSION NAME! */
+    ext.version_name = '0.1.0-beta01'
+
     ext.kotlin_version = '1.3.72'
     ext.gradle_version = '4.0.0'
 
@@ -74,6 +71,10 @@ buildscript {
 }
 
 allprojects {
+    // These should be applied to all modules in this project.
+    project.ext.set("versionCode", getRevisionCount())
+    project.ext.set("versionName", version_name)
+
     repositories {
         google()
         jcenter()
@@ -84,4 +85,12 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+/**
+ * We will use the git revision count as a version code.
+ * @return the git revision count, integer.
+ */
+static def getRevisionCount() {
+    return Integer.parseInt('git rev-list --count HEAD'.execute().text.trim())
 }
