--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,7 @@
         <activity android:name=".feature.account.JoinActivity" />
         <activity android:name=".feature.account.LoginActivity" />
         <activity android:name=".feature.main.MainActivity" />
-        <activity
-            android:name=".feature.settings.SettingsActivity"
-            android:parentActivityName=".feature.main.MainActivity" />
+        <activity android:name=".feature.settings.SettingsActivity" />
 
     </application>
 
