--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@
 
 buildscript {
     /** THE VERSION NAME! */
-    ext.version_name = '0.1.0-beta05'
+    ext.version_name = '0.1.0'
 
     ext.kotlin_version = '1.3.72'
     ext.gradle_version = '4.0.0'
